--- a/qml.qrc
+++ b/qml.qrc
@@ -236,10 +236,12 @@
         <file alias="left_arrow_black.svg">resources/images/icons/left_arrow/left_arrow_black.svg</file>
         <file alias="left_arrow_eProsimaLightBlue.svg">resources/images/icons/left_arrow/left_arrow_eProsimaLightBlue.svg</file>
         <file alias="left_arrow_grey.svg">resources/images/icons/left_arrow/left_arrow_grey.svg</file>
+        <file alias="left_arrow_mid_grey.svg">resources/images/icons/left_arrow/left_arrow_mid_grey.svg</file>
         <file alias="left_arrow_white.svg">resources/images/icons/left_arrow/left_arrow_white.svg</file>
         <file alias="right_arrow_black.svg">resources/images/icons/right_arrow/right_arrow_black.svg</file>
         <file alias="right_arrow_eProsimaLightBlue.svg">resources/images/icons/right_arrow/right_arrow_eProsimaLightBlue.svg</file>
         <file alias="right_arrow_grey.svg">resources/images/icons/right_arrow/right_arrow_grey.svg</file>
+        <file alias="right_arrow_mid_grey.svg">resources/images/icons/right_arrow/right_arrow_mid_grey.svg</file>
         <file alias="right_arrow_white.svg">resources/images/icons/right_arrow/right_arrow_white.svg</file>
         <file alias="rounded_left_arrow_black.svg">resources/images/icons/rounded_left_arrow/rounded_left_arrow_black.svg</file>
         <file alias="rounded_left_arrow_eProsimaLightBlue.svg">resources/images/icons/rounded_left_arrow/rounded_left_arrow_eProsimaLightBlue.svg</file>
