Add point trace to chartview (not working)
Signed-off-by: Raul Sanchez-Mateos <raul@eprosima.com>

--- a/qml.qrc
+++ b/qml.qrc
@@ -27,6 +27,7 @@
         <file>qml/DynamicDataKindDialog.qml</file>
         <file>qml/DynamicDisplayStatisticsDialog.qml</file>
         <file>qml/DynamicStatisticsChartView.qml</file>
+        <file>qml/HoverLine.qml</file>
         <file>qml/EntitiesMenu.qml</file>
         <file>qml/EntityList.qml</file>
         <file>qml/ErrorDialog.qml</file>
