Add more GUI components and prepare callbacks to bind with backend
Signed-off-by: Emilio Cuesta <emiliocuesta@eprosima.com>

--- a/qml.qrc
+++ b/qml.qrc
@@ -17,6 +17,7 @@
         <file>qml/AdaptiveComboBox.qml</file>
         <file>qml/AdaptiveMenu.qml</file>
         <file>qml/AlertKindDialog.qml</file>
+        <file>qml/AlertsPanel.qml</file>
         <file>qml/NewDataAlertDialog.qml</file>
         <file>qml/NoDataAlertDialog.qml</file>
         <file>qml/ChangeAliasDialog.qml</file>
