Refs #23719: Alert List, Alert Data and Alert Messages are being correcly displayed
Signed-off-by: Emilio Cuesta <emiliocuesta@eprosima.com>

--- a/qml.qrc
+++ b/qml.qrc
@@ -19,6 +19,7 @@
         <file>qml/AlertKindDialog.qml</file>
         <file>qml/AlertList.qml</file>
         <file>qml/AlertsPanel.qml</file>
+        <file>qml/AlertSummary.qml</file>
         <file>qml/NewDataAlertDialog.qml</file>
         <file>qml/NoDataAlertDialog.qml</file>
         <file>qml/ChangeAliasDialog.qml</file>
