Adding remove alert functionality
Signed-off-by: Emilio Cuesta <emiliocuesta@eprosima.com>

--- a/qml.qrc
+++ b/qml.qrc
@@ -18,6 +18,7 @@
         <file>qml/AdaptiveMenu.qml</file>
         <file>qml/AlertDialog.qml</file>
         <file>qml/AlertList.qml</file>
+        <file>qml/AlertsMenu.qml</file>
         <file>qml/AlertsPanel.qml</file>
         <file>qml/AlertSummary.qml</file>
         <file>qml/ChangeAliasDialog.qml</file>
