Add alerts visualization (#272)
* Adding GUI features for alerts

Signed-off-by: Emilio Cuesta <emiliocuesta@eprosima.com>

* Refs #23615 #23616,  more changes to GUI and icons

Signed-off-by: Emilio Cuesta <emiliocuesta@eprosima.com>

* Add more GUI components and prepare callbacks to bind with backend

Signed-off-by: Emilio Cuesta <emiliocuesta@eprosima.com>

* Alert request reaches controller

Signed-off-by: Emilio Cuesta <emiliocuesta@eprosima.com>

* More advances, probably not compiling yet

Signed-off-by: Emilio Cuesta <emiliocuesta@eprosima.com>

* Advancing towards alerts

Signed-off-by: Emilio Cuesta <emiliocuesta@eprosima.com>

* Refs #23615, simplyfing interface to show alert messages

Signed-off-by: Emilio Cuesta <emiliocuesta@eprosima.com>

* Adjusting left panel alert view

Signed-off-by: Emilio Cuesta <emiliocuesta@eprosima.com>

* Refs #23615, full alert pipe ready

Signed-off-by: Emilio Cuesta <emiliocuesta@eprosima.com>

* Changing on_alert_reported by triggered

Signed-off-by: Emilio Cuesta <emiliocuesta@eprosima.com>

* Display does not collapse now

Signed-off-by: Emilio Cuesta <emiliocuesta@eprosima.com>

* Adding new AlertList/Item models

Signed-off-by: Emilio Cuesta <emiliocuesta@eprosima.com>

* Refs #23719: Alert List, Alert Data and Alert Messages are being correcly displayed

Signed-off-by: Emilio Cuesta <emiliocuesta@eprosima.com>

* Refs #23719: Uncrustify and remove of unwanted logs and comments

Signed-off-by: Emilio Cuesta <emiliocuesta@eprosima.com>

* Removing unwanted logs

Signed-off-by: Emilio Cuesta <emiliocuesta@eprosima.com>

* Remove log

Signed-off-by: Emilio Cuesta <emiliocuesta@eprosima.com>

* Fixing compilation errors after backend rebase

Signed-off-by: Emilio Cuesta <emiliocuesta@eprosima.com>

* Simplifying add_alert menu

Signed-off-by: Emilio Cuesta <emiliocuesta@eprosima.com>

* WIP

Signed-off-by: Emilio Cuesta <emiliocuesta@eprosima.com>

* WIP, no warnings

Signed-off-by: Emilio Cuesta <emiliocuesta@eprosima.

--- a/qml.qrc
+++ b/qml.qrc
@@ -16,6 +16,11 @@
         <file>qml/AboutDialog.qml</file>
         <file>qml/AdaptiveComboBox.qml</file>
         <file>qml/AdaptiveMenu.qml</file>
+        <file>qml/AlertDialog.qml</file>
+        <file>qml/AlertList.qml</file>
+        <file>qml/AlertsMenu.qml</file>
+        <file>qml/AlertsPanel.qml</file>
+        <file>qml/AlertSummary.qml</file>
         <file>qml/ChangeAliasDialog.qml</file>
         <file>qml/ChartsLayout.qml</file>
         <file>qml/CustomLegend.qml</file>
@@ -81,6 +86,10 @@
         <file alias="loading_graph.gif">resources/images/loading_graph.gif</file>
     </qresource>
     <qresource prefix="/resources/images/icons">
+        <file alias="alert_black.svg">resources/images/icons/alert/alert_black.svg</file>
+        <file alias="alert_eProsimaLightBlue.svg">resources/images/icons/alert/alert_eProsimaLightBlue.svg</file>
+        <file alias="alert_grey.svg">resources/images/icons/alert/alert_grey.svg</file>
+        <file alias="alert_white.svg">resources/images/icons/alert/alert_white.svg</file>
         <file alias="clearissues_black.svg">resources/images/icons/clearissues/clearissues_black.svg</file>
         <file alias="clearissues_eProsimaLightBlue.svg">resources/images/icons/clearissues/clearissues_eProsimaLightBlue.svg</file>
         <file alias="clearissues_grey.svg">resources/images/icons/clearissues/clearissues_grey.svg</file>
