Feature/alerts improvement (#274)
* Changing alert_unmatched per alter_timeout + visual fixes

Signed-off-by: Emilio Cuesta <emiliocuesta@eprosima.com>

* Adding tooltips to manual options in alerts

Signed-off-by: Emilio Cuesta <emiliocuesta@eprosima.com>

* Adding placeholder_alert_name

Signed-off-by: Emilio Cuesta <emiliocuesta@eprosima.com>

* Adding validation of numeric inputs

Signed-off-by: Emilio Cuesta <emiliocuesta@eprosima.com>

* Adding units to threshold input

Signed-off-by: Emilio Cuesta <emiliocuesta@eprosima.com>

* Adding ALL option to dropboxes

Signed-off-by: Emilio Cuesta <emiliocuesta@eprosima.com>

* Properly resetting alert dialog fields

Signed-off-by: Emilio Cuesta <emiliocuesta@eprosima.com>

* Status bar icon toggles from white to black

Signed-off-by: Emilio Cuesta <emiliocuesta@eprosima.com>

* Calling set alert from topic menu populates topic, domain missing yet

Signed-off-by: Emilio Cuesta <emiliocuesta@eprosima.com>

* Selecting topic from graph

Signed-off-by: Emilio Cuesta <emiliocuesta@eprosima.com>

* Fixing alert dialog not shrinking after show/unshow advanced options

Signed-off-by: Emilio Cuesta <emiliocuesta@eprosima.com>

* Minor aestetics

Signed-off-by: Emilio Cuesta <emiliocuesta@eprosima.com>

* User can define timeout time now

Signed-off-by: Emilio Cuesta <emiliocuesta@eprosima.com>

* Add timeout polling time as a config variable

Signed-off-by: Emilio Cuesta <emiliocuesta@eprosima.com>

* Improving docs

Signed-off-by: Emilio Cuesta <emiliocuesta@eprosima.com>

* Improving docs

Signed-off-by: Emilio Cuesta <emiliocuesta@eprosima.com>

* Refactor enum

Signed-off-by: Emilio Cuesta <emiliocuesta@eprosima.com>

* Uncrustify

Signed-off-by: Emilio Cuesta <emiliocuesta@eprosima.com>

* Making alert messages more explicit

Signed-off-by: Emilio Cuesta <emiliocuesta@eprosima.com>

* Making alert msg shorter so that if fits in most screens

Signed-off-by: Emilio Cuesta <emiliocuesta@eprosima.com>

* Applying review

Sign

--- a/qml.qrc
+++ b/qml.qrc
@@ -17,6 +17,7 @@
         <file>qml/AdaptiveComboBox.qml</file>
         <file>qml/AdaptiveMenu.qml</file>
         <file>qml/AlertDialog.qml</file>
+        <file>qml/AlertsSettingsDialog.qml</file>
         <file>qml/AlertList.qml</file>
         <file>qml/AlertsMenu.qml</file>
         <file>qml/AlertsPanel.qml</file>
@@ -86,6 +87,8 @@
         <file alias="loading_graph.gif">resources/images/loading_graph.gif</file>
     </qresource>
     <qresource prefix="/resources/images/icons">
+        <file alias="alert_on_black.svg">resources/images/icons/alert/alert_on_black.svg</file>
+        <file alias="alert_off_black.svg">resources/images/icons/alert/alert_off_black.svg</file>
         <file alias="alert_black.svg">resources/images/icons/alert/alert_black.svg</file>
         <file alias="alert_eProsimaLightBlue.svg">resources/images/icons/alert/alert_eProsimaLightBlue.svg</file>
         <file alias="alert_grey.svg">resources/images/icons/alert/alert_grey.svg</file>
