Fix qt6 compatibitlity issues and refactor tree views
Signed-off-by: Raül <raulojeda@eprosima.com>

--- a/qml.qrc
+++ b/qml.qrc
@@ -63,6 +63,9 @@
         <file>qml/MonitorToolBarButton.qml</file>
         <file>qml/Panels.qml</file>
         <file>qml/PhysicalView.qml</file>
+	<file>qml/ReusableTreeView.qml</file>
+        <file>qml/StatusTreeView.qml</file>
+        <file>qml/StatusTreeViewItem.qml</file>
         <file>qml/QosView.qml</file>
         <file>qml/ScheduleClearDialog.qml</file>
         <file>qml/SeriesSetMaxPointsDialog.qml</file>
